# SKYPRO_HOMEWORK_31_VALIDATORS_TESTS

./: manage.py  pyproject.toml  pytest.ini
HOMEWORK_30/: asgi.py  settings.py  urls.py  validators.py  wsgi.py
ads/: admin.py  permissions.py  urls.py
ads/fixtures/: ad.json  location.json  user.json
ads/migrations/: 0001_initial.py  0002_category_ad.py  0003_selection.py
ads/models/: __init__.py  ad.py  category.py  location.py  selection.py
ads/serializers/: ad.py  category.py  location.py  selection.py
ads/views/: ad.py  category.py  selection.py
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
media/images/: IMG_1575.HEIC
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_detail_test.py  ad_list_test.py  category_list_test.py  selection_create_test.py
